--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+
+body {
+  display: flex;
+  flex: 1 1 100%;
+  flex-direction: column;
+  min-height: 100vh;
+  background: #000;
+  color: #aaa;
+  font-family: 'Segoe UI';
+  cursor: default;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
