--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,10 +3,15 @@
 
 .main-header {
   display: flex;
-  flex-basis: 100%;
   justify-content: center;
-  margin-bottom: 50px;
-  font-size: 30px;
+  max-width: 1000px;
+  padding: 20px 0;
+  margin: 0 auto 50px auto;
+  border-bottom: 1px solid #222;
+  font-size: 32px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  user-select: none;
 }
 
 
@@ -16,13 +21,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 50px;
-  font-size: 18px;
+  margin-bottom: 40px;
+  font-size: 17px;
+  letter-spacing: .005em;
 }
 
 .main-intro p {
   max-width: 800px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 
@@ -32,17 +38,39 @@
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
+  user-select: none;
 }
 
 .main-controls-label {
-  font-size: 24px;
+  font-size: 22px;
 }
 
 .main-controls-button {
   display: inline-flex;
   margin-left: 15px;
-  padding: 5px 10px;
+  padding: 3px 10px 5px 10px;
+  border-radius: 5px;
   background: #222;
   font-size: 22px;
   cursor: pointer;
+  transition: .2s;
+}
+
+.main-controls-button:hover {
+  background: #282828;
+}
+
+
+/* Timeline Wrapper */
+
+.timeline-wrapper {
+  padding: 30px 0 200px 0;
+}
+
+.timeline-wrapper-normal {
+  animation: fadeIn1 .5s;
+}
+
+.timeline-wrapper-reversed {
+  animation: fadeIn2 .5s;
 }
