--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,40 @@
 
-<div class="main-header">Geological Timeline of Earth</div>
+<!-- Header -->
+<div class="main-header">Geologic History of the Earth</div>
 
+<!-- Intro -->
 <div class="main-intro">
   <p>The history of our planet is much longer than the history of human civilization. Scientists study the layers of ice and rock, examine fossilized remains of extinct animals, and use various other complex methods to learn about the past. </p>
-  <p>The amount of data currently known about the Earth's history is enormous. We now understand that before us there have been dozens of periods and epochs, each with its own climate conditions, geograpic features, ecosystems and biodiversity.</p>
-  <p>Here you can see a brief summary of the Earth's geological history, learn about commonly recognized eras and periods, and what happened on our planet during those times.</p>
+  <p>The amount of knowledge currently available about the Earth's history is enormous. We now understand that before us there have been dozens upon dozens of periods and epochs, each with its own environmental conditions, climate, geograpy, ecosystems and biodiversity.</p>
+  <p>Here you can see a brief summary of the Earth's geologic history, learn about commonly recognized eras, and get some basic understanding of what was happening on our planet during those times.</p>
 </div>
 
+<!-- Controls -->
 <div class="main-controls">
-  <span class="main-controls-label">Start from </span>
+  <span class="main-controls-label">Start from: </span>
   <div 
     class="main-controls-button"
-    (click)="setReverse(true)">Present Time</div>
+    (click)="setReverseState(false)">Formation of the Earth</div>
   <div 
     class="main-controls-button"
-    (click)="setReverse(false)">Formation of Earth</div>
+    (click)="setReverseState(true)">Present Time</div>
 </div>
 
-<app-division-container
-  *ngFor="let eon of eons"
-  [containers]="eons"
-  [division]="eon"
-  [reverse]="reverse">
-</app-division-container>
+<!-- Timeline -->
+<div 
+  class="timeline-wrapper"
+  [ngClass]="{
+    'timeline-wrapper-normal': !reverseState,
+    'timeline-wrapper-reversed': reverseState
+  }">
+  <app-division-container
+    *ngFor="let eon of eons"
+    [containers]="eons"
+    [division]="eon"
+    [reverse]="reverseState">
+  </app-division-container>
+</div>
 
+
+<!-- Do I even need router for this project? -->
 <router-outlet></router-outlet>
