--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <!-- Header -->
-<div class="main-header">Geologic History of the Earth</div>
+<div class="main-header">Geologic History of Earth</div>
 
 <!-- Intro -->
 <div class="main-intro">
@@ -14,7 +14,7 @@
   <span class="main-controls-label">Start from: </span>
   <div 
     class="main-controls-button"
-    (click)="setReverseState(false)">Formation of the Earth</div>
+    (click)="setReverseState(false)">Formation of Earth</div>
   <div 
     class="main-controls-button"
     (click)="setReverseState(true)">Present Time</div>
