--- a/src/app/timeline-boundary/timeline-boundary.component.css
+++ b/src/app/timeline-boundary/timeline-boundary.component.css
@@ -10,7 +10,7 @@
 .timeline-boundary-line {
   display: flex;
   flex: 1 1 100%;
-  border-top: 1px solid #999;
+  border-top: 1px dashed #777;
 }
 
 .timeline-boundary-value {
