--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@ body {
   background: #080808;
   color: #a8a8a8;
   font-family: 'Open Sans', monospace;
+  font-weight: 400;
   cursor: default;
   animation: fadeIn 1s;
 }
@@ -14,6 +15,17 @@ body {
 * {
   margin: 0;
   padding: 0;
+}
+
+::selection {
+  color: #ddd;
+  background: rgba(0, 255, 204, .25);
+}
+
+b {
+  color: #ccc;
+  font-weight: 500;
+  letter-spacing: .02em;
 }
 
 
