--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
 
 <!-- Intro -->
 <div class="main-intro">
-  <p>The history of our planet is much longer than the history of human civilization. Scientists study the layers of ice and rock, examine fossilized remains of extinct animals, and use various other complex methods to learn about the past. </p>
-  <p>The amount of knowledge currently available about the Earth's history is enormous. We now understand that before us there have been dozens upon dozens of periods and epochs, each with its own environmental conditions, climate, geograpy, ecosystems and biodiversity.</p>
+  <p>The history of our planet is much longer than the history of human civilization. Scientists study the layers of ice and rock, examine fossilized remains of extinct creatures, and use various other complex methods to learn about the past. </p>
+  <p>The amount of knowledge currently available about the Earth's history is enormous. We now understand that before us there have been dozens upon dozens of periods and epochs, each with its own environmental conditions, climate, geography, ecosystems and biodiversity.</p>
   <p>Here you can see a brief summary of the Earth's geologic history, learn about commonly recognized eras, and get some basic understanding of what was happening on our planet during those times.</p>
 </div>
 
