--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -74,3 +74,28 @@
 .timeline-wrapper-reversed {
   animation: fadeIn2 .5s;
 }
+
+
+.timeline-image-wrapper {
+  position: relative;
+  display: flex;
+  margin: 20px 0;
+  justify-content: center;
+}
+
+.timeline-image-wrapper img {
+  display: block;
+  max-width: min(600px, 100%);
+  border-radius: 10px;
+}
+
+.timeline-image-wrapper:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  margin: 0 auto;
+  width: min(600px, 100%);
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 5px #080808 inset;
+}
